--- a/yunta/yunta.html
+++ b/yunta/yunta.html
@@ -121,10 +121,112 @@
 	    </div>
     </section>
 
+
 </div>
-<div class="qocurre"></div>
-<div class="quienessomos"></div>
-<div class="metodologia"></div>
+<div class="qocurre">
+	<div class="row">
+		<div class="col-md-2">
+			<h1>¿QUÉ OCURRE?</h1>
+		</div>
+		<div class="col-md-6">
+			<div class="col-md-6">
+				<div class="cuadro1">
+					<p>Lima y Arequipa concentran</p>
+					<p class="big-blue">+20%</p>
+					<p>de denuncias por violencia familiar.</p>
+				</div>
+				<div class="cuadro3">
+					<p>En el año 2014,</p>
+					<p class="big-blue">50,845</p>
+					<p>casos de violencia familiar y sexual fueron atendidos en los CEM.</p>
+				</div>
+			</div>
+			<div class="col-md-6"> 
+				<div class="cuadro2">
+					<p>El estado emplea solamente el</p>
+					<p class="big-blue">0,07%</p>
+					<p>del presupuesto nacional para enfrentar la violencia familiar y sexual.</p>
+				</div>
+				<div class="cuadro4">
+					<p class="big-blue">37%</p>
+					<p>de hogares en el Perú se ven afectados por la violencia familiar.</p>
+				</div>
+			</div>
+			<p>Fuente: MIMP Estadístico Diciembre 2014</p>
+		</div>
+		<div class="col-md-4">
+			<img class="img-responsive" src="">
+			<div class="bg-red">
+				<p>Los niños y niñas afectados por esta realidad, poseen <strong>baja autoestima,</strong> sufren de insomnio, falta de concentración falta de apetito, depresión, estrés, ansiedad, entre otros.</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="quienessomos">
+	<div class="bg-mision">
+		<p>Somos un emprendimiento social comprometido con la niñez y juventuud del Perú que busca empoderar a esta población emparejándolos con un mentor adulto para que, a través de sesiones de mentoring,<strong>fortalezcan su autoestima,potencien sus habilidadesy desarrollen su sentido de posibilidad.</strong> </p>
+	</div>
+	<div class="bg-vision">
+		<p>"En el 2020, Yunta habrá impactado en más de 4000 peruanos, <strong>formandolos como agentes de cambio</strong> dispuestos a entregar sus talentos al servicio de la sociedad."</p>
+	</div>
+</div>
+<div class="metodologia">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-responsive" src="images/h1.png">
+			</div>
+			<div class="col-md-1">
+				<img class="img-responsive" src="images/mas.png">
+			</div>
+			<div class="col-md-3">
+				<img class="img-responsive" src="images/h2.png">
+			</div>
+			<div class="col-md-1">
+				<img class="img-responsive" src="images/igual.png">
+			</div>
+			<div class="col-md-4">
+				<img class="img-responsive" src="images/sol.png">
+			</div>
+		</div>
+		<h4 class="border">NUESTRA <strong>METODOLOGÍA</strong></h4>
+	</div>
+</div>
+<div class="meto-etapas bg-black text-white pd40 text-center">
+	<div class="container">
+		<p class="text-center">Nuestra metodología se desarrolla en <strong>cinco etapas:</strong></p>
+		<div class="row">
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/lupa.png">
+				<p>AUTOCONOCIMIENTO</p>
+			</div>
+			<div class="col-xs-6"></div>
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/mass.png">
+				<p>AUTOACEPTACIÓN</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-5"></div>
+			<div class="col-xs-2">
+				<img class="img-responsive" src="images/corazon.png">
+				<p>AUTOESTIMA</p>
+			</div>
+			<div class="col-xs-5"></div>
+		</div> 
+		<div class="row">
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/star.png">
+				<p>PROYECTO DE IMPACTO SOCIAL</p>
+			</div>
+			<div class="col-xs-6"></div>
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/dream.png"> 
+				<p>ASPIRACIÓN</p>
+			</div>
+		</div> 
+	</div>
+</div>
 <script src="js/swiper.min.js"></script>
 </body>
 </html>
