--- a/yunta/yunta.html
+++ b/yunta/yunta.html
@@ -2,51 +2,43 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Yunta</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/swiper.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/shadowbox.css">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bienvenida.js"></script>
+    <script type="text/javascript" src="js/shadowbox.js"></script>
 </head>
 <body>
 <header>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
-					<img class="logo img-responsive pull-left" src="images/logo.jpg" alt="Yunta logo">
+				<div class="col-md-2">
+					<img class="logo img-responsive pull-left" src="images/logo_yunta.png" alt="Yunta logo">
 				</div>
-				<div class="col-md-6 np">
-					<div class="header-menu">
-				       <nav role="navigation" class="navbar navbar-inverse menu">
-				            <div class="navbar-header">
-				                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-				                    <span class="sr-only">Toggle navigation</span>
-				                    <span class="icon-bar"></span>
-				                    <span class="icon-bar"></span>
-				                    <span class="icon-bar"></span>
-				                </button>
-				            </div>
-				            <div id="navbarCollapse" class="collapse navbar-collapse np">
-				                <ul class="nav navbar-nav nav-1">
-				                	<li><a href=""><i class="fa fa-home"></i></a></li>
-									<li><a href="">NOSOTROS</a></li>
-									<li><a href="">INSPIRANDO</a></li>
-									<li><a href="">IMPACTO</a></li>
-									<li><a href="">ALIADOS</a></li>
-									<li><a href="">LOS PROTAGONISTAS</a></li>
-								</ul>
-				            </div>
-				        </nav>
-				      </div>
+				<div class="col-md-7">
+					<div id="" class="menu">
+		                <ul class="">
+		                	<li><a href=""><i class="fa fa-home"></i></a></li>
+							<li><a href="">NOSOTROS</a></li>
+							<li><a href="">INSPIRANDO</a></li>
+							<li><a href="">IMPACTO</a></li>
+							<li><a href="">ALIADOS</a></li>
+							<li><a href="">LOS PROTAGONISTAS</a></li>
+						</ul>
+		            </div>
 				</div>
+				 
 				<div class="col-md-3">
 					<div class="redes text-center col-xs-12">
 						<div class="bg-fb">
-                           <a href=""  target="_blank" title="Facebook">
+                           <a href="https://www.facebook.com/Yunta-1434521176785284/?fref=ts"  target="_blank" title="Facebook">
                                <i class=" text-white fa fa-facebook"></i>
                            </a>
                         </div>
@@ -56,12 +48,12 @@
                             </a>
                         </div>
                         <div class="bg-in">
-                            <a href=""  target="_blank" title="Linkedin">
+                            <a href=" https://www.linkedin.com/company/yunta-per%C3%BA"  target="_blank" title="Linkedin">
                                <i class=" text-white fa fa-linkedin"></i>
                             </a>
                         </div>
                         <div class="bg-vimeo">
-                               <a href=""  target="_blank" title="Vimeo">
+                               <a href="https://vimeo.com/user26001410"  target="_blank" title="Vimeo">
                                    <i class=" text-white fa fa-vimeo"></i>
                                </a>
                        </div>
@@ -84,34 +76,50 @@
 	        <div class="swiper-wrapper">
 	            <div class="swiper-slide">
 	            	<div class="text-slide">
-	            		<span class="t-s-bg">
-		            		<a class="t-s-1"><i class="fa fa-play-circle-o"></i> </a>
-		            		<a class="t-s-2">Mira nuestro video</a>
-	            		</span>
+	            		<div class="container">
+	            			<a href="https://player.vimeo.com/video/153282790" rel="shadowbox">
+						        <div class="items">
+						        	<i class="fa fa-play-circle-o"></i>
+		           					<p class="t-s-2">Mira nuestro video</p>
+						        </div>
+						    </a>
+						</div>
 	            	</div>
 	            </div>
 	            <div class="swiper-slide">
 	            	<div class="text-slide">
-	            		<span class="t-s-bg">
-		            		<a href="" class="t-s-1"><i class="fa fa-play-circle-o"></i> </a>
-		            		<a href="" class="t-s-2">Mira nuestro video</a>
-	            		</span>
+	            		<div class="container">
+	            			<a href="https://player.vimeo.com/video/153282790" rel="shadowbox">
+						        <div class="items">
+						        	<i class="fa fa-play-circle-o"></i>
+		           					<p class="t-s-2">Mira nuestro video</p>
+						        </div>
+						    </a>
+						</div>
 	            	</div>
 	            </div>
 	            <div class="swiper-slide">
 	            	<div class="text-slide">
-	            		<span class="t-s-bg">
-		            		<a href="" class="t-s-1"><i class="fa fa-play-circle-o"></i> </a>
-		            		<a href="" class="t-s-2">Mira nuestro video</a>
-	            		</span>
+	            		<div class="container">
+	            			<a href="https://player.vimeo.com/video/153282790" rel="shadowbox">
+						        <div class="items">
+						        	<i class="fa fa-play-circle-o"></i>
+		           					<p class="t-s-2">Mira nuestro video</p>
+						        </div>
+						    </a>
+						</div>
 	            	</div>
 	            </div>
 	            <div class="swiper-slide">
 	            	<div class="text-slide">
-	            		<span class="t-s-bg">
-		            		<a href="" class="t-s-1"><i class="fa fa-play-circle-o"></i> </a>
-		            		<a href="" class="t-s-2">Mira nuestro video</a>
-	            		</span>
+	            		<div class="container">
+	            			<a href="https://player.vimeo.com/video/153282790" rel="shadowbox">
+						        <div class="items">
+						        	<i class="fa fa-play-circle-o"></i>
+		           					<p class="t-s-2">Mira nuestro video</p>
+						        </div>
+						    </a>
+						</div>
 	            	</div>
 	            </div>
 	        </div>
@@ -123,110 +131,282 @@
 
 
 </div>
-<div class="qocurre">
-	<div class="row">
+<div class="que-ocurre container">
+	<div class="row pd40">
 		<div class="col-md-2">
-			<h1>¿QUÉ OCURRE?</h1>
+			<div class="pos-rel"><h1 class="rotar"><strong>¿QUÉ OCURRE?</strong></h1></div>
 		</div>
-		<div class="col-md-6">
-			<div class="col-md-6">
+		<div class="col-md-7 text-center">
+			<div class="down hidden-xs"></div>
+			<div class="col-sm-6">
 				<div class="cuadro1">
 					<p>Lima y Arequipa concentran</p>
-					<p class="big-blue">+20%</p>
+					<p class="text-blue">+20%</p>
 					<p>de denuncias por violencia familiar.</p>
 				</div>
 				<div class="cuadro3">
 					<p>En el año 2014,</p>
-					<p class="big-blue">50,845</p>
+					<p class="text-blue">50,845</p>
 					<p>casos de violencia familiar y sexual fueron atendidos en los CEM.</p>
 				</div>
+				<p class="text-end hidden-xs">Fuente: MIMP Estadístico Diciembre 2014</p>
 			</div>
-			<div class="col-md-6"> 
+			<div class="col-sm-6"> 
 				<div class="cuadro2">
 					<p>El estado emplea solamente el</p>
-					<p class="big-blue">0,07%</p>
+					<p class="text-blue">0,07%</p>
 					<p>del presupuesto nacional para enfrentar la violencia familiar y sexual.</p>
 				</div>
 				<div class="cuadro4">
-					<p class="big-blue">37%</p>
+					<p class="text-blue">37%</p>
 					<p>de hogares en el Perú se ven afectados por la violencia familiar.</p>
 				</div>
 			</div>
-			<p>Fuente: MIMP Estadístico Diciembre 2014</p>
 		</div>
-		<div class="col-md-4">
-			<img class="img-responsive" src="">
-			<div class="bg-red">
+		<div class="col-md-3 text-center text-white">
+			<img class="img-responsive fl-verde" src="images/flecha_verde.png">
+			<div class="bg-red pd10">
 				<p>Los niños y niñas afectados por esta realidad, poseen <strong>baja autoestima,</strong> sufren de insomnio, falta de concentración falta de apetito, depresión, estrés, ansiedad, entre otros.</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="quienessomos">
-	<div class="bg-mision">
-		<p>Somos un emprendimiento social comprometido con la niñez y juventuud del Perú que busca empoderar a esta población emparejándolos con un mentor adulto para que, a través de sesiones de mentoring,<strong>fortalezcan su autoestima,potencien sus habilidadesy desarrollen su sentido de posibilidad.</strong> </p>
+<hr>
+<div class="quienes-somos container">
+	<div>
+		<h5 class="pull-right mg-mision-right">NUESTRA <strong>MISIÓN</strong> </h5>
+		<h2 class="mg-mision-left"><strong>¿QUIÉNES SOMOS?</strong></h2>
+		<img class="pull-left img-responsive fl-amarilla hidden-xs" src="images/flecha_amarilla.png">
+		<div class="bg-mision text-center text-white">
+			<p>Somos un emprendimiento social comprometido con la niñez y juventuud del Perú que busca empoderar a esta población emparejándolos con un mentor adulto para que, a través de sesiones de mentoring,<strong>fortalezcan su autoestima, potencien sus habilidades y desarrollen su sentido de posibilidad.</strong> </p>
+		</div>
 	</div>
-	<div class="bg-vision">
-		<p>"En el 2020, Yunta habrá impactado en más de 4000 peruanos, <strong>formandolos como agentes de cambio</strong> dispuestos a entregar sus talentos al servicio de la sociedad."</p>
+	<div>
+		<img src="images/flecha_roja.png" class="img-responsive hidden-xs fl-roja pull-right"></img>
+		<h5 class="pull-right mg-vision-right" >NUESTRA <strong>VISIÓN</strong> </h5>
+		<h2 class="mg-vision-left"><strong>¿QUÉ QUEREMOS?</strong></h2>
+		<div class="bg-vision text-center text-white">
+			<p>"En el 2020, Yunta habrá impactado en más de 4000 peruanos, <strong>formándolos como agentes de cambio</strong> dispuestos a entregar sus talentos al servicio de la sociedad."</p>
+		</div>
+	</div>
+</div>
+<div class="valores bg-black text-white">
+	<div class="container pd40">
+		<p><strong>Nuestros valores definen la esencia de Yunta de forma ideal</strong></p>
+		<br>
+		<p class="mg-costados">Nuestras decisiones y actuar se basan en estos valores, que junto anuestra visión y misión nos impulsan a hcer las cosas con excelencia y dar lo mejor de nosotros mismos.</p>
+		<br><br>
+		<p>Haz las cosas <strong class="color-amarillo pd-rg">con alegria</strong>        				Haz las cosas <strong class="color-rojo">con el corazón</strong> </p>
+		<br><br>
+		<p>Sé flexible <strong class="color-naranja">y adaptable</strong> </p>
+		<br>
+		<p>Aprovecha cada <strong class="color-verde">oportunidad de aprendizaje</strong> </p>
+		<!--<img class="hombres-azules img-responsive pull-right" src="images/hombres.png">-->
 	</div>
 </div>
 <div class="metodologia">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<img class="img-responsive" src="images/h1.png">
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/mentee.png">
 			</div>
-			<div class="col-md-1">
-				<img class="img-responsive" src="images/mas.png">
+			<div class="col-xs-1">
+				<img class="img-responsive" src="images/plus.png">
 			</div>
-			<div class="col-md-3">
-				<img class="img-responsive" src="images/h2.png">
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/mentor.png">
 			</div>
-			<div class="col-md-1">
+			<div class="col-xs-1">
 				<img class="img-responsive" src="images/igual.png">
 			</div>
-			<div class="col-md-4">
-				<img class="img-responsive" src="images/sol.png">
+			<div class="col-xs-3">
+				<img class="img-responsive" src="images/cambio.png">
 			</div>
 		</div>
-		<h4 class="border">NUESTRA <strong>METODOLOGÍA</strong></h4>
+		<div class="row pos-absolut">
+			<div class="col-xs-4">
+				<div class="row">
+					<h1><strong>MENTEE</strong></h1></div>
+					<div class="col-xs-3 parentesis-a">(</div>
+					<div class="col-xs-6"><p class="mg-top1"> niños y jóvenes<br>de contextos<br>vulnerables</p></div>
+					<div class="col-xs-3 parentesis-b">)</div>
+				</div>
+			<div class="col-xs-4">
+				<div class="row">
+					<h1><strong>MENTOR</strong></h1></div>
+					<div class="col-xs-3 parentesis-a">(</div>
+					<div class="col-xs-6"><p class="mg-top2">amigo calificado</p></div>
+					<div class="col-xs-3 parentesis-b">)</div>
+				</div>
+			<div class="col-xs-4">
+				<div class="row">
+					<h1><strong>CAMBIO</strong></h1>
+					<div class="col-xs-3 parentesis-a">(</div>
+					<div class="col-xs-6"><p class="mg-top3">nueve meses de<br>transformación</p></div>
+					<div class="col-xs-3 parentesis-b">)</div>
+				</div>
+			</div>
+		</div>
+		<h4 class="border-bottom-yellow">NUESTRA <strong>METODOLOGÍA</strong></h4>
 	</div>
 </div>
 <div class="meto-etapas bg-black text-white pd40 text-center">
 	<div class="container">
 		<p class="text-center">Nuestra metodología se desarrolla en <strong>cinco etapas:</strong></p>
 		<div class="row">
-			<div class="col-xs-3">
+			<div class="col-sm-3">
 				<img class="img-responsive" src="images/lupa.png">
+				<h3 class="color-naranja">YO ME<br>CONOZCO</h3>
 				<p>AUTOCONOCIMIENTO</p>
 			</div>
-			<div class="col-xs-6"></div>
-			<div class="col-xs-3">
-				<img class="img-responsive" src="images/mass.png">
+			<div class="col-sm-6">
+				<div class="raya1"></div>
+			</div>
+			<div class="col-sm-3">
+				<img class="img-responsive" src="images/mas.png">
+				<h3 class="color-verde">YO ME<br>ACEPTO</h3>
 				<p>AUTOACEPTACIÓN</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-5"></div>
-			<div class="col-xs-2">
+			<div class="col-sm-5">
+				<div class="raya2"></div>
+			</div>
+			<div class="col-sm-2">
 				<img class="img-responsive" src="images/corazon.png">
+				<h3 class="color-rojo">YO ME<br>QUIERO</h3>
 				<p>AUTOESTIMA</p>
 			</div>
-			<div class="col-xs-5"></div>
+			<div class="col-sm-5">
+				<div class="raya3"></div>
+			</div>
 		</div> 
 		<div class="row">
-			<div class="col-xs-3">
-				<img class="img-responsive" src="images/star.png">
+			<div class="col-sm-3">
+				<img class="img-responsive" src="images/estrella.png">
+				<h3 class="color-amarillo">YO<br>ACTÚO</h3>
 				<p>PROYECTO DE IMPACTO SOCIAL</p>
 			</div>
-			<div class="col-xs-6"></div>
-			<div class="col-xs-3">
-				<img class="img-responsive" src="images/dream.png"> 
+			<div class="col-sm-6">
+				<div class="raya4"></div><i class="fa fa-play"></i>
+			</div>
+			<div class="col-sm-3">
+				<img class="img-responsive" src="images/nube.png">
+				<h3 class="color-azul">YO<br>SUEÑO</h3> 
 				<p>ASPIRACIÓN</p>
 			</div>
 		</div> 
 	</div>
 </div>
+<div class="proyectos bg-black text-white">
+	<div class="container">
+		<div class="row linea-tiempo">
+			<li class="inline"><div class="raya5"></div></li>
+			<li class="inline"><p>2013</p></li>
+			<li class="inline"><div class="raya6 inline"></div><i class="fa fa-play"></i></li>
+			<li class="inline"><p>2014</p></li>
+			<li class="inline"><div class="raya7 inline"></div><i class="fa fa-play"></i></li>
+			<li class="inline"><p>2015</p></li>
+			<li class="inline"><div class="raya8 inline"></div><i class="fa fa-play icon-up"></i></li>
+		</div>
+		<div class="row pd40">
+			<div class="col-sm-2">
+				<div class="pos-rel"><h1 class="rotar2"><strong>PROYECTOS</strong></h1></div>
+			</div>
+			<div class="col-sm-2">
+				<div class="bg-azul">
+					<p>AREQUIPA</p>
+					<li>Proyecto Piloto Escuela Concertada Solaris-Cono Norte</li>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="bg-verde">
+					<p>AREQUIPA</p>
+					<li>Proyecto Solaris Escuela Concertada Solaris-Cono Norte</li>
+				</div>
+				<div class="bg-verde mg-top3">
+					<p>LIMA</p>
+					<li>Proyecto Perú Champs Colegio Innova Schools</li>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="bg-naranja">
+					<p>AREQUIPA</p>
+					<li>Proyecto Luz del Sol Colegio San Juan Apóstol-Villa Cerrillos</li>
+					<li>Proyecto Luz de Luna Colegio San Juan Apóstol-Villa Cerrillos</li>
+					<li>Emprendiendo Juntos Colaboradores de Caja Arequipa y Escuela Concertada Solaris-Cono Norte</li>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="bg-naranja">
+					<p>LIMA</p>
+					<li>Proyecto Ate Colegio San Benito Palermo</li>
+					<li>Proyecto San Miguel Colegio General Roque Sáenz Peña</li>
+					<li>Proyecto Fundación Peruana de Cáncer</li>
+					<li>Proyecto Casa Hogar Rebuschin</li>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="aliados text-center container">
+	<h4 class="border-top-yellow">NUESTROS ALIADOS</h4>
+	<br>
+	<h4>EMPRESAS</h4>
+	<div class="row">
+		<div class="col-md-3">
+			<a href="http://www.cajaarequipa.pe/"><img class="img-responsive" src="images/.png" alt="Caja Arequipa"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://capriccioperu.com/"><img class="img-responsive" src="images/.png" alt="Capriccio"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://www.claro.com.pe/portal/pe/sc/personas/"><img class="img-responsive" src="images/.png" alt="Claro Perú"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://www.isur.edu.pe/"><img class="img-responsive" src="images/.png" alt="Instituto del Sur"></a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<a href="http://www.michell.com.pe/"><img class="img-responsive" src="images/.png" alt="Michell"></a>
+		</div>
+		<div class="col-md-4">
+			<a href="http://kia.com.pe/"><img class="img-responsive" src="images/.png" alt="KIA"></a>
+		</div>
+		<div class="col-md-4">
+			<a href="http://www.agricolacerroprieto.com/"><img class="img-responsive" src="images/.png" alt="Agricola Cerro Prieto"></a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<a href=""><img class="img-responsive" src="images/.png" alt="Futura"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://www.edifica.com.pe/"><img class="img-responsive" src="images/.png" alt="Edifica"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://www.comp-air.com/"><img class="img-responsive" src="images/.png" alt="Comp Air"></a>
+		</div>
+		<div class="col-md-3">
+			<a href="http://www.consejeros.com.pe/ccs/"><img class="img-responsive" src="images/.png" alt="Consejeros"></a>
+		</div>
+	</div>
+	<br>
+	<h4>INSTITUCIONES</h4>
+	<li>Colegio Peruano Alemán Max Uhle</li>
+	<li>Colegio Anglo Americano Prescott</li>
+	<li>Colegio Nuestra Señora del Pilar</li>
+	<li>Colegio San José</li>
+	<li>Bomberos del Perú</li>
+	<li>Universidad Católica San Pablo</li>
+	<li>Instituto de Psicoterapias Vinculares</li>
+</div>
+<script type="text/javascript"> Shadowbox.init({
+    language: "es",
+    players: ['img', 'html', 'iframe', 'qt', 'wmp', 'swf', 'flv']
+}); 
+</script>
 <script src="js/swiper.min.js"></script>
 </body>
 </html>
